--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,10 +62,21 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     // Retrofit Moshi Converter
-    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
 
+    // Koin for Android
+    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
+
+    // Koin Test
+    testImplementation "io.insert-koin:koin-test-junit4:3.2.2"
+
+    // Mockito framework
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+    // Coil
+    implementation "io.coil-kt:coil-compose:$coil_version"
 }
