--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     ext {
         compose_ui_version = '1.1.1'
+        koin_version = '3.3.0'
+        retrofit_version = '2.9.0'
+        coil_version = '2.2.2'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
