--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieApp"
         tools:targetApi="31"
-        android:name=".MovieApplication">
+        android:name=".framework.MovieApplication">
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".framework.ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MovieApp">
