--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         koin_version = '3.3.0'
         retrofit_version = '2.9.0'
         coil_version = '2.2.2'
+        accompanist_version = '0.28.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
