--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         retrofit_version = '2.9.0'
         coil_version = '2.2.2'
         accompanist_version = '0.28.0'
+        navigation_version = '2.5.3'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
