--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
     implementation "androidx.compose.ui:ui-util:$compose_ui_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -92,4 +93,7 @@ dependencies {
 
     // Compose Navigation
     implementation "androidx.navigation:navigation-compose:$navigation_version"
+
+    // Lottie Files
+    implementation "com.airbnb.android:lottie-compose:$lottie_files_version"
 }
