--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         accompanist_version = '0.28.0'
         navigation_version = '2.5.3'
         coroutine_test = '1.6.4'
+        lottie_files_version = '5.2.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
